Revise a few chapters

--- a/glossary.tex
+++ b/glossary.tex
@@ -1,10 +1,171 @@
-\newglossaryentry{Remote sensing}{
-	name=Remote sensing,
-	description={refers to non-contact techniques that allow recording data about objects' surfaces.}
-}
+% \newglossaryentry{Remote sensing}{
+% 	name=Remote sensing,
+% 	description={refers to non-contact techniques that allow recording data about objects' surfaces.}
+% }
 
 % Glossary entries (used in text with e.g. \acrfull{fpsLabel} or \acrshort{fpsLabel})
-\newacronym[longplural={Frames per Second}]{fpsLabel}{FPS}{Frame per Second}
-\newacronym[longplural={Tables of Contents}]{tocLabel}{TOC}{Table of Contents}
-\newacronym[longplural={Remote Sensing}]{rsLabel}{RS}{Remote Sensing}
+\newacronym[longplural={Airborne Laser Scanning}]{als}{ALS}{Airborne Laser Scanning}
+\newacronym[longplural={Advanced Very High-Resolution Radiometer}]{avhrr}{AVHRR-3}{Advanced Very High-Resolution Radiometer}
+\newacronym[longplural={Artificial Intelligence}]{ai}{AI}{Artificial Intelligence}
+\newacronym[longplural={Artificial Neural Network}]{ann}{ANN}{Artificial Neural Network}
+\newacronym[longplural={Average Accuracy}]{aa}{AA}{Average Accuracy}
+\newacronym[longplural={Axis-Aligned Bounding Box}]{aabb}{AABB}{Axis-Aligned Bounding Box}
+\newacronym[longplural={Back-Projection MRAE}]{bpmrae}{BPMRAE}{Back-Projection MRAE}
+\newacronym[longplural={Bidirectional Reflectance Distribution Function}]{brdf}{BRDF}{Bidirectional Reflectance Distribution Function}
+\newacronym[longplural={Bidirectional Scatter Distribution Function}]{bsdf}{BSDF}{Bidirectional Scatter Distribution Function}
+\newacronym[longplural={Bidirectional Scattering Surface Distribution Function}]{bssdf}{BSSDF}{Bidirectional Scattering Surface Distribution Functions}
+\newacronym[longplural={Backpack-mounted Mobile LiDAR Scanning}]{bmmls}{BMMLS}{Backpack-mounted Mobile LiDAR Scanning}
+\newacronym[longplural={Boundary Volume Hierarchy}]{bvh}{BVH}{BBoundary Volume Hierarchy}
+\newacronym[longplural={Building Information Modelling}]{bim}{BIM}{Building Information Modelling}
+\newacronym[longplural={Bundle Adjustment}]{ba}{BA}{Bundle Adjustment}
+\newacronym[longplural={Central Processing Unit}]{cpu}{CPU}{Central Processing Unit}
+\newacronym[longplural={Computational Geometry Algorithms Library}]{cgal}{CGAL}{Computational Geometry Algorithms Library}
+\newacronym[longplural={China–Brazil Earth Resources Satellite}]{cbers}{CBERS}{China–Brazil Earth Resources Satellite}
+\newacronym[longplural={Charge-coupled Devices}]{ccd}{CCD}{Charge-coupled Devices}
+\newacronym[longplural={Competitive Adaptive Reweighted Sampling}]{cars}{CARS}{Competitive Adaptive Reweighted Sampling}
+\newacronym[longplural={Complementary Metal-Oxide}]{cmos}{CMOS}{Complementary Metal-Oxide}
+\newacronym[longplural={Computer-aided Design}]{cad}{CAD}{Computer-aided Design}
+\newacronym[longplural={Computer Graphics}]{cg}{CG}{Computer Graphics}
+\newacronym[longplural={Constrained Energy Minimization}]{cem}{CEM}{Constrained Energy Minimization}
+\newacronym[longplural={Control Point}]{cp}{CP}{Control Point}
+\newacronym[longplural={Convolutional Autoencoder}]{cnn-ae}{CNN-AEE}{Convolutional Autoencoder}
+\newacronym[longplural={Convolutional Neural Network}]{cnn}{CNN}{Convolutional Neural Network}
+\newacronym[longplural={Correlation Coefficient}]{cc}{CC}{Correlation Coefficient}
+\newacronym[longplural={Cross-Correlogram Spectral Matching}]{ccsm}{CCSM}{Cross-Correlogram Spectral Matching}
+\newacronym[longplural={Compute Unified Device Architecture}]{cuda}{CUDA}{Compute Unified Device Architecture}
+\newacronym[longplural={Deep Learning}]{dl}{DL}{Deep Learning}
+\newacronym[longplural={Dice Spectral Similarity Coefficient}]{dssc}{DSSC}{Dice Spectral Similarity Coefficient}
+\newacronym[longplural={Digital Elevation Model}]{dem}{DEM}{Digital Elevation Model}
+\newacronym[longplural={Digital Surface Model}]{dsm}{DSM}{Digital Surface Model}
+\newacronym[longplural={Digital Terrain Model}]{dtm}{DTM}{Digital Terrain Model}
+\newacronym[longplural={Digital Number}]{dn}{DN}{Digital Number}
+\newacronym[longplural={Divide and Conquer}]{d&c}{D\&C}{Divide and Conquer}
+\newacronym[longplural={Electromagnetic}]{em}{EM}{Electromagnetic}
+\newacronym[longplural={Empirical Line Method}]{elm}{ELM}{Empirical Line Method}
+\newacronym[longplural={Enhanced Correlation Coefficient}]{ecc}{ECC}{Enhanced Correlation Coefficient}
+\newacronym[longplural={External Orientation Parameters}]{eop}{EOP}{External Orientation Parameters}
+\newacronym[longplural={Factor Analysis}]{fa}{FA}{Factor Analysis}
+\newacronym[longplural={Fast Global Registration}]{fgr}{FGR}{Fast Global Registration}
+\newacronym[longplural={Field of View}]{fov}{FOV}{Field of View}
+\newacronym[longplural={Focal Plane Array}]{fpa}{FPA}{Focal Plane Array}
+\newacronym[longplural={Frames Per Second}]{fps}{FPS}{Frames Per Second}
+\newacronym[longplural={Generative Adversarial Network}]{gan}{GAN}{Generative Adversarial Network}
+\newacronym[longplural={Geographic Information System}]{gis}{GIS}{Geographic Information System}
+\newacronym[longplural={Global Navigation Satellite System}]{gnss}{GNSS}{Global Navigation Satellite System}
+\newacronym[longplural={Global Positioning System}]{gps}{GPS}{Global Positioning System}
+\newacronym[longplural={General-Purpose Computing on Graphics Processing Units}]{gpgpu}{GPGPU}{General-Purpose Computing on Graphics Processing Units}
+\newacronym[longplural={Graphics Processing Unit}]{gpu}{GPU}{Graphics Processing Unit}
+\newacronym[longplural={Graphical User Interface}]{gui}{GUI}{Graphical User Interface}
+\newacronym[longplural={Ground Control Points}]{gcp}{GCP}{Ground Control Points}
+\newacronym[longplural={Graphic Processing Cluster}]{gpc}{GPC}{Graphic Processing Cluster}
+\newacronym[longplural={Genetic Algorithm}]{ga}{GA}{Genetic Algorithm}
+\newacronym[longplural={OpenGL Shading Language}]{glsl}{GLSL}{OpenGL Shading Language}
+\newacronym[longplural={Ground Sampling Distance}]{gsd}{GSD}{Ground Sampling Distance}
+\newacronym[longplural={Hemispherical-Directional Reflectance Function}]{hdrf}{HDRF}{Hemispherical-Directional Reflectance Function}
+\newacronym[longplural={High-Quality Shading}]{hqs}{HQS}{High-Quality Shading}
+\newacronym[longplural={Hyperspectral Imaging}]{hsi}{HSI}{Hyperspectral Imaging}
+\newacronym[longplural={Independent Component Analysis}]{ica}{ICA}{Independent Component Analysis}
+\newacronym[longplural={Inertial Measurement Unit}]{imu}{IMU}{Inertial Measurement Unit}
+\newacronym[longplural={Infrared Thermal Imaging}]{ir}{IR}{Infrared Thermal Imaging}
+\newacronym[longplural={Interferometric Synthetic Aperture Radar}]{insar}{InSAR}{Interferometric Synthetic Aperture Radar}
+\newacronym[longplural={Iterative Closest Point}]{icp}{ICP}{Iterative Closest Point}
+\newacronym[longplural={Joint Photographic Experts Group}]{jpeg}{JPEG}{Joint Photographic Experts Group}
+\newacronym[longplural={$k$-Nearest Neighbours}]{knn}{KNN}{$k$-Nearest Neighbours}
+\newacronym[longplural={Kumar–Johnson Spectral Similarity Coefficient}]{kjssc}{KJSSC}{Kumar–Johnson Spectral Similarity Coefficient}
+\newacronym[longplural={LASer}]{las}{LAS}{LASer}
+\newacronym[longplural={Layered Point Clouds}]{lpc}{LPC}{Layered Point Clouds}
+\newacronym[longplural={Leaf Area Index}]{lai}{LAI}{Leaf Area Index}
+\newacronym[longplural={Least Discriminant Analysis}]{lda}{LDA}{Least Discriminant Analysis}
+\newacronym[longplural={Least-Square Method}]{lsm}{LSM}{Least-Square Method}
+\newacronym[longplural={Level of Accuracy}]{loa}{LOA}{Level of Accuracy}
+\newacronym[longplural={Level of Detail}]{lod}{LOD}{Level of Detail}
+\newacronym[longplural={Level of Overlap}]{loo}{LOO}{Level of Overlap}
+\newacronym[longplural={Level of Coverage}]{loc}{LOC}{Level of Coverage}
+\newacronym[longplural={Light Detection and Ranging}]{lidar}{LiDAR}{Light Detection and Ranging}
+\newacronym[longplural={Linear Mixture Models}]{lmm}{LMM}{Linear Mixture Models}
+\newacronym[longplural={Long Short-Term Memory}]{lstm}{LSTM}{Long Short-Term Memory}
+\newacronym[longplural={Long-wave Infrared}]{lwir}{LWIR}{Long-wave Infrared}
+\newacronym[longplural={Long-wave}]{lw}{LW}{Long-wave}
+\newacronym[longplural={Machine Learning}]{ml}{ML}{Machine Learning}
+\newacronym[longplural={Maximum Likelihood Sample Consensus}]{mlsac}{MLSAC}{Maximum Likelihood Sample Consensus}
+\newacronym[longplural={Mean Square Error}]{mse}{MSE}{Mean Square Error}
+\newacronym[longplural={Mean Absolute Error}]{mae}{MAE}{Mean Absolute Error}
+\newacronym[longplural={Mean Relative Absolute Error}]{mrae}{MRAE}{Mean Relative Absolute Error}
+\newacronym[longplural={Mid-wave Infrared}]{mwir}{MWIR}{Mid-wave Infrared}
+\newacronym[longplural={Mixture-Tuned Matching Filtering Technique}]{mtmf}{MTMF}{Mixture-Tuned Matching Filtering}
+\newacronym[longplural={Mobile Laser Scanner}]{mls}{MLS}{Mobile Laser Scanner}
+\newacronym[longplural={Mobile Mapping Systems}]{mms}{MMS}{Mobile Mapping Systems}
+\newacronym[longplural={Multilayer Perceptron}]{mlp}{MLP}{Multilayer Perceptron}
+\newacronym[longplural={Multi-View Stereo}]{mvs}{MVS}{Multi-View Stereo}
+\newacronym[longplural={Multiple End-member Spectral Mixture Analysis}]{mesma}{MESMA}{Multiple End-member Spectral Mixture Analysis}
+\newacronym[longplural={Near-Infrared}]{nir}{NIR}{Near-Infrared}
+\newacronym[longplural={Next Best View}]{nbv}{NBV}{Next Best View}
+\newacronym[longplural={Nonnegative Matrix Factorization}]{nnmf}{NNMF}{Nonnegative Matrix Factorization}
+\newacronym[longplural={Normalized difference vegetation index}]{ndvi}{NDVI}{Normalized difference vegetation index}
+\newacronym[longplural={Object-Oriented Bounding Box}]{oobb}{OOBB}{Object-Oriented Bounding Box}
+\newacronym[longplural={Open Source Computer Vision Library}]{opencv}{OpenCV}{Open Source Computer Vision Library}
+\newacronym[longplural={Operational Land Imager}]{oli2}{OLI-2}{Operational Land Imager}
+\newacronym[longplural={Open Graphics Library}]{opengl}{OpenGL}{Open Graphics Library}
+\newacronym[longplural={Open Multi-Processing}]{openmp}{OpenMP}{Open Multi-Processing}
+\newacronym[longplural={Operative System}]{os}{OS}{Operative System}
+\newacronym[longplural={Oriented FAST and rotated BRIEF}]{orb}{ORB}{Oriented FAST and rotated BRIEF}
+\newacronym[longplural={Overall Accuracy}]{oa}{OA}{Overall Accuracy}
+\newacronym[longplural={Partially Least Square}]{pls}{PLS}{Partially Least Square}
+\newacronym[longplural={Partial Least-Square Discriminant Analysis}]{plsda}{PLS-DA}{Partial Least-Square Discriminant Analysis}
+\newacronym[longplural={Peak Signal-to-Noise Ratio}]{psnr}{PSNR}{Peak Signal-to-Noise Ratio}
+\newacronym[longplural={Perspective n Point}]{pnp}{PnP}{Perspective n Point}
+\newacronym[longplural={Physically-based Rendering}]{pbr}{PBR}{Physically-based Rendering}
+\newacronym[longplural={Planning 4 Scanning}]{p4s}{P4S}{Planning 4 Scanning}
+\newacronym[longplural={Point Cloud Compression}]{pcc}{PCC}{Point Cloud Compression}
+\newacronym[longplural={Point Cloud Library}]{pcl}{PCL}{Point Cloud Library}
+\newacronym[longplural={Polygon File Format}]{ply}{PLY}{Polygon File Format}
+\newacronym[longplural={Precision Agriculture}]{pa}{PA}{Precision Agriculture}
+\newacronym[longplural={Precision Viticulture}]{pv}{PV}{Precision Viticulture}
+\newacronym[longplural={Principal Component Analysis}]{pca}{PCA}{Principal Component Analysis}
+\newacronym[longplural={Quasi-Monte Carlo}]{qmc}{QMC}{Quasi-Monte Carlo}
+\newacronym[longplural={Radial Basis Function}]{rbf}{RBF}{Radial Basis Function}
+\newacronym[longplural={Radiance Invariant Feature Transform}]{rift}{RIFT}{Radiance Invariant Feature Transform}
+\newacronym[longplural={Radiometric Joint Photographic Experts Group}]{rjpeg}{RJPEG}{Radiometric Joint Photographic Experts Group}
+\newacronym[longplural={Random Forest}]{rf}{RF}{Random Forest}
+\newacronym[longplural={Random Sample Consensus}]{ransac}{RANSAC}{Random Sample Consensus}
+\newacronym[longplural={Real-Time Kinematic}]{rtk}{RTK}{Real-Time Kinematic}
+\newacronym[longplural={Red, Green, Blue}]{rgb}{RGB}{Red, Green, Blue}
+\newacronym[longplural={RGB-Depth}]{rgbd}{RGB-D}{RGB-Depth}
+\newacronym[longplural={Red-Edge}]{reg}{REG}{Red-Edge}
+\newacronym[longplural={Remote Sensing}]{rs}{RS}{Remote Sensing}
+\newacronym[longplural={Root Mean Square Error}]{rmse}{RMSE}{Root Mean Square Error}
+\newacronym[longplural={Scale-Invariant Feature Transform}]{sift}{SIFT}{Scale-Invariant Feature Transform}
+\newacronym[longplural={Simulated Annealing}]{sa}{SA}{Simulated Annealing}
+\newacronym[longplural={Speeded-Up Robust Features}]{surf}{SURF}{Speeded-Up Robust Features}
+\newacronym[longplural={Structure from Motion}]{sfm}{SfM}{Structure from Motion}
+\newacronym[longplural={Shader Storage Buffer Object}]{ssbo}{SSBO}{Shader Storage Buffer Object}
+\newacronym[longplural={Short-wave Infrared}]{swir}{SWIR}{Short-wave Infrared}
+\newacronym[longplural={Signal-to-Noise Ratio}]{snr}{SNR}{Signal-to-Noise Ratio}
+\newacronym[longplural={Singular Value Decomposition}]{svd}{SVD}{Singular Value Decomposition}
+\newacronym[longplural={Space Filling Curve}]{sfc}{SFC}{Space Filling Curve}
+\newacronym[longplural={Spectral Angle Mapper}]{sam}{SAM}{Spectral Angle Mapper}
+\newacronym[longplural={Spectral Gradient Angle}]{sga}{SGA}{Spectral Gradient Angle}
+\newacronym[longplural={Spectral Correlation Angle}]{sca}{SCA}{Spectral Correlation Angle}
+\newacronym[longplural={Spectral Correlation Matching}]{scm}{SCM}{Spectral Correlation Matching}
+\newacronym[longplural={Spectral Information Divergence}]{sid}{SID}{Spectral Information Divergence}
+\newacronym[longplural={Stack-based Representation}]{sbr}{SBR}{Stack-based Representation}
+\newacronym[longplural={Standard Normal Variate}]{snv}{SNV}{Standard Normal Variate}
+\newacronym[longplural={Successive Projection Algorithm}]{spa}{SPA}{Successive Projection Algorithm}
+\newacronym[longplural={Support Vector Machine}]{svm}{SVM}{Support Vector Machine}
+\newacronym[longplural={Surface Area Heuristic}]{sah}{SAH}{Surface Area Heuristic}
+\newacronym[longplural={Tag Image File Format}]{tiff}{TIFF}{Tag Image File Format}
+\newacronym[longplural={Television and Infrared Observation Satellite}]{tiros}{TIROS}{Television and Infrared Observation Satellite}
+\newacronym[longplural={Terrestrial Laser Scanning}]{tls}{TLS}{Terrestrial Laser Scanning}
+\newacronym[longplural={Thermal Infrared Sensor 2}]{tirs2}{TIRS-2}{Thermal Infrared Sensor 2}
+\newacronym[longplural={Thermal Infrared}]{tir}{TIR}{Thermal Infrared}
+\newacronym[longplural={Time of Flight}]{tof}{ToF}{Time of Flight}
+\newacronym[longplural={T-distributed Stochastic Neighbor Embedding}]{tsne}{t-SNE}{T-distributed Stochastic Neighbor Embedding}
+\newacronym[longplural={Two-Dimensional Correlation Spectroscopy}]{2dcs}{2DCS}{Two-Dimensional Correlation Spectroscopy}
+\newacronym[longplural={Universal Transverse Mercator}]{utm}{UTM}{Universal Transverse Mercator}
+\newacronym[longplural={Ultra High-Definition}]{uhd}{UHD}{Ultra High-Definition}
+\newacronym[longplural={Ultraviolet}]{uv}{UV}{Ultraviolet}
+\newacronym[longplural={Uniform Manifold Approximation and Projection}]{umap}{UMAP}{Uniform Manifold Approximation and Projection}
+\newacronym[longplural={Unmanned Aerial System}]{uas}{UAS}{Unmanned Aerial System}
+\newacronym[longplural={Virtual Reality}]{vr}{VR}{Virtual Reality}
+\newacronym[longplural={Visual Simultaneous Localization and Mapping}]{vslam}{VSLAM}{Visual Simultaneous Localization and Mapping}
 
