--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,250 @@
 
+@article{hendrich_ray_2019,
+	title = {Ray {Classification} for {Accelerated} {BVH} {Traversal}},
+	volume = {38},
+	doi = {10.1111/cgf.13769},
+	number = {4},
+	journal = {Computer Graphics Forum},
+	author = {Hendrich, J. and Pospíšil, A. and Meister, D. and Bittner, J.},
+	month = jul,
+	year = {2019},
+	keywords = {Categories and Subject Descriptors (according to ACM CCS):, I.3.5 Computer Graphics: Object Hierarchies—, I.3.7 Computer Graphics: Raytracing—, I.3.7 Computer Graphics: Three-Dimensional Graphics and Realism—},
+	pages = {49--56},
+}
+
+@article{piadyk_streetaware_2023,
+	title = {{StreetAware}: {A} {High}-{Resolution} {Synchronized} {Multimodal} {Urban} {Scene} {Dataset}},
+	volume = {23},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {1424-8220},
+	shorttitle = {{StreetAware}},
+	url = {https://www.mdpi.com/1424-8220/23/7/3710},
+	doi = {10.3390/s23073710},
+	abstract = {Access to high-quality data is an important barrier in the digital analysis of urban settings, including applications within computer vision and urban design. Diverse forms of data collected from sensors in areas of high activity in the urban environment, particularly at street intersections, are valuable resources for researchers interpreting the dynamics between vehicles, pedestrians, and the built environment. In this paper, we present a high-resolution audio, video, and LiDAR dataset of three urban intersections in Brooklyn, New York, totaling almost 8 unique hours. The data were collected with custom Reconfigurable Environmental Intelligence Platform (REIP) sensors that were designed with the ability to accurately synchronize multiple video and audio inputs. The resulting data are novel in that they are inclusively multimodal, multi-angular, high-resolution, and synchronized. We demonstrate four ways the data could be utilized — (1) to discover and locate occluded objects using multiple sensors and modalities, (2) to associate audio events with their respective visual representations using both video and audio modes, (3) to track the amount of each type of object in a scene over time, and (4) to measure pedestrian speed using multiple synchronized camera views. In addition to these use cases, our data are available for other researchers to carry out analyses related to applying machine learning to understanding the urban environment (in which existing datasets may be inadequate), such as pedestrian-vehicle interaction modeling and pedestrian attribute recognition. Such analyses can help inform decisions made in the context of urban sensing and smart cities, including accessibility-aware urban design and Vision Zero initiatives.},
+	language = {en},
+	number = {7},
+	urldate = {2023-04-16},
+	journal = {Sensors},
+	author = {Piadyk, Yurii and Rulff, Joao and Brewer, Ethan and Hosseini, Maryam and Ozbay, Kaan and Sankaradas, Murugan and Chakradhar, Srimat and Silva, Claudio},
+	month = jan,
+	year = {2023},
+	note = {Number: 7
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {computer vision, data synchronization, street-level imagery, urban intelligence, urban multimedia data, urban sensing},
+	pages = {3710},
+}
+
+@inproceedings{karras_maximizing_2012,
+	address = {Goslar, DEU},
+	series = {{EGGH}-{HPG}'12},
+	title = {Maximizing parallelism in the construction of {BVHs}, octrees, and k-d trees},
+	isbn = {978-3-905674-41-5},
+	abstract = {A number of methods for constructing bounding volume hierarchies and point-based octrees on the GPU are based on the idea of ordering primitives along a space-filling curve. A major shortcoming with these methods is that they construct levels of the tree sequentially, which limits the amount of parallelism that they can achieve. We present a novel approach that improves scalability by constructing the entire tree in parallel. Our main contribution is an in-place algorithm for constructing binary radix trees, which we use as a building block for other types of trees.},
+	urldate = {2023-04-16},
+	booktitle = {Proceedings of the {Fourth} {ACM} {SIGGRAPH} / {Eurographics} conference on {High}-{Performance} {Graphics}},
+	publisher = {Eurographics Association},
+	author = {Karras, Tero},
+	month = jun,
+	year = {2012},
+	pages = {33--37},
+}
+
+@inproceedings{revelles_efficient_2000,
+	title = {An {Efficient} {Parametric} {Algorithm} for {Octree} {Traversal}},
+	booktitle = {Journal of {WSCG}},
+	author = {Revelles, J. and Ureña, C. and Lastra, M.},
+	year = {2000},
+	pages = {212--219},
+}
+
+@inproceedings{dos_santos_kd-tree_2009,
+	title = {{kD}-{Tree} {Traversal} {Implementations} for {Ray} {Tracing} on {Massive} {Multiprocessors}: {A} {Comparative} {Study}},
+	shorttitle = {{kD}-{Tree} {Traversal} {Implementations} for {Ray} {Tracing} on {Massive} {Multiprocessors}},
+	doi = {10.1109/SBAC-PAD.2009.25},
+	abstract = {Current GPU computational power enables the execution of complex and parallel algorithms, such as Ray Tracing techniques supported by kD-trees for 3D scene rendering in real time. This work describes in detail the study and implementation of five different kD-Tree traversal algorithms using the parallel framework NVIDIA Compute Unified Device Architecture (CUDA), in order to point their pros and cons regarding adaptation capability to the chosen architecture. In addition, a new algorithm is proposed by the authors based on this analysis, aiming performance improvement. A performance analysis of the implemented techniques demonstrates that two of these algorithms, once adequately adapted to CUDA architecture, are capable of reaching speedup gains up to 15x when compared to former CPU implementations and up to 4x in comparison to existing and optimized parallel ones. As a consequence, interactive frame rates are possible for scenes with 1376x768 pixels of resolution and 1 million primitives.},
+	booktitle = {2009 21st {International} {Symposium} on {Computer} {Architecture} and {High} {Performance} {Computing}},
+	author = {dos Santos, Artur L. and Teixeira, Joao Marcelo X.N. and de Farias, Thiago S.M.C. and Teichrieb, Veronica and Kelner, Judith},
+	month = oct,
+	year = {2009},
+	note = {ISSN: 1550-6533},
+	keywords = {CUDA, Communication standards, Decoding, Digital video broadcasting, Error correction codes, Integrated circuit interconnections, Iterative algorithms, Network-on-a-chip, Parity check codes, Ray Tracing, Ray tracing, Traversal, WiMAX, kD-Tree},
+	pages = {41--48},
+}
+
+@article{amanatides_fast_1987,
+	title = {A {Fast} {Voxel} {Traversal} {Algorithm} for {Ray} {Tracing}},
+	issn = {1017-4656},
+	url = {https://diglib.eg.org:443/xmlui/handle/10.2312/egtp19871000},
+	doi = {10.2312/egtp.19871000},
+	abstract = {A fast and simple voxel traversal algorithm through a 3D space partition is introduced. Going from one voxel to its neighbour requires only two floating point comparisons and one floating point addition. Also, multiple ray intersections with objects that are in more than one voxel are eliminated.},
+	language = {en},
+	urldate = {2023-04-16},
+	author = {Amanatides, John and Woo, Andrew},
+	year = {1987},
+	note = {Accepted: 2015-10-05T07:55:23Z
+Publisher: Eurographics Association},
+}
+
+@misc{adinets_onesweep_2022,
+	title = {Onesweep: {A} {Faster} {Least} {Significant} {Digit} {Radix} {Sort} for {GPUs}},
+	shorttitle = {Onesweep},
+	url = {http://arxiv.org/abs/2206.01784},
+	doi = {10.48550/arXiv.2206.01784},
+	abstract = {We present Onesweep, a least-significant digit (LSD) radix sorting algorithm for large GPU sorting problems residing in global memory. Our parallel algorithm employs a method of single-pass prefix sum that only requires {\textasciitilde}2n global read/write operations for each digit-binning iteration. This exhibits a significant reduction in last-level memory traffic versus contemporary GPU radix sorting implementations, where each iteration of digit binning requires two passes through the dataset totaling {\textasciitilde}3n global memory operations. On the NVIDIA A100 GPU, our approach achieves 29.4 GKey/s when sorting 256M random 32-bit keys. Compared to CUB, the current state-of-the-art GPU LSD radix sort, our approach provides a speedup of {\textasciitilde}1.5x. For 32-bit keys with varied distributions, our approach provides more consistent performance compared to HRS, the current state-of-the-art GPU MSD radix sort, and outperforms it in almost all cases.},
+	urldate = {2023-04-15},
+	publisher = {arXiv},
+	author = {Adinets, Andy and Merrill, Duane},
+	month = jun,
+	year = {2022},
+	note = {arXiv:2206.01784 [cs]},
+	keywords = {Computer Science - Data Structures and Algorithms, Computer Science - Distributed, Parallel, and Cluster Computing, D.1.3, F.2.2},
+}
+
+@article{royo_non-line--sight_2022,
+	title = {Non-line-of-sight transient rendering},
+	volume = {107},
+	issn = {0097-8493},
+	url = {https://www.sciencedirect.com/science/article/pii/S0097849322001200},
+	doi = {10.1016/j.cag.2022.07.003},
+	abstract = {The capture and analysis of light in flight, or light in transient state, has enabled applications such as range imaging, reflectance estimation and especially non-line-of-sight (NLOS) imaging. For this last case, hidden geometry can be reconstructed using time-resolved measurements of indirect diffuse light emitted by a laser. Transient rendering is a key tool for developing such new applications, significantly more challenging than its steady-state counterpart. In this work, we introduce a set of simple yet effective subpath sampling techniques targeting transient light transport simulation in occluded scenes. We analyze the usual capture setups of NLOS scenes, where both the camera and light sources are focused on particular points in the scene. Also, the hidden geometry can be difficult to sample using conventional techniques. We leverage that configuration to reduce the integration path space. We implement our techniques in a modified version of Mitsuba 2 adapted for transient light transport, allowing us to support parallelization, polarization, and differentiable rendering.},
+	language = {en},
+	urldate = {2023-04-15},
+	journal = {Computers \& Graphics},
+	author = {Royo, Diego and García, Jorge and Muñoz, Adolfo and Jarabo, Adrian},
+	month = oct,
+	year = {2022},
+	keywords = {Light transport, Non-line-of-sight imaging, Transient rendering},
+	pages = {84--92},
+}
+
+@misc{oxford_university_press_oxford_2023,
+	title = {Oxford {Learner}'s {Dictionaries}},
+	url = {https://www.oxfordlearnersdictionaries.com/},
+	urldate = {2023-04-13},
+	author = {{Oxford University Press}},
+	month = mar,
+	year = {2023},
+}
+
+@book{marrs_ray_2021,
+	address = {Berkeley, CA},
+	title = {Ray {Tracing} {Gems} {II}: {Next} {Generation} {Real}-{Time} {Rendering} with {DXR}, {Vulkan}, and {OptiX}},
+	isbn = {978-1-4842-7184-1 978-1-4842-7185-8},
+	shorttitle = {Ray {Tracing} {Gems} {II}},
+	url = {https://link.springer.com/10.1007/978-1-4842-7185-8},
+	language = {en},
+	urldate = {2023-04-14},
+	publisher = {Apress},
+	editor = {Marrs, Adam and Shirley, Peter and Wald, Ingo},
+	year = {2021},
+	doi = {10.1007/978-1-4842-7185-8},
+	keywords = {BVH and Acceleration Structures, Computer Graphics, DirectX Raytracing, GPU, Game development, Open Access, Path Tracing, Rasterization, Ray Tracing, Real-Time Rendering, Vulkan Ray Tracing},
+}
+
+@article{sankey_uav_2018,
+	title = {{UAV} hyperspectral and lidar data and their fusion for arid and semi-arid land vegetation monitoring},
+	volume = {4},
+	issn = {2056-3485},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/rse2.44},
+	doi = {10.1002/rse2.44},
+	abstract = {Unmanned aerial vehicles (UAVs) provide a new research tool to obtain high spatial and temporal resolution imagery at a reduced cost. Rapid advances in miniature sensor technology are leading to greater potentials for ecological research. We demonstrate one of the first applications of UAV lidar and hyperspectral imagery and a fusion method for individual plant species identification and 3D characterization at submeter scales in south-eastern Arizona, USA. The UAV lidar scanner characterized the individual vegetation canopy structure and bare ground elevation, whereas the hyperspectral sensor provided species-specific spectral signatures for the dominant and target species at our study area in leaf-on condition. We hypothesized that the fusion of the two different data sources would perform better than either data type alone in the arid and semi-arid ecosystems with sparse vegetation. The fusion approach provides 84–89\% overall accuracy (kappa values of 0.80–0.86) in target species classification at the canopy scale, leveraging a wide range of target spectral responses in the hyperspectral data and a high point density (50 points/m2) in the lidar data. In comparison, the hyperspectral image classification alone produced 72–76\% overall accuracies (kappa values of 0.70 and 0.71). The UAV lidar-derived digital elevation model (DEM) is also strongly correlated with manned airborne lidar-derived DEM (R2 = 0.98 and 0.96), but was obtained at a lower cost. The lidar and hyperspectral data as well as the fusion method demonstrated here can be widely applied across a gradient of vegetation and topography to monitor and detect ecological changes at a local scale.},
+	language = {en},
+	number = {1},
+	urldate = {2023-02-28},
+	journal = {Remote Sensing in Ecology and Conservation},
+	author = {Sankey, Temuulen T. and McVay, Jason and Swetnam, Tyson L. and McClaran, Mitchel P. and Heilman, Philip and Nichols, Mary},
+	year = {2018},
+	keywords = {3D modeling, UAV, high-resolution DEM, lidar, species identification, vegetation monitoring},
+	pages = {20--33},
+}
+
+@book{haines_ray_2019,
+	address = {Berkeley, CA},
+	title = {Ray {Tracing} {Gems}: {High}-{Quality} and {Real}-{Time} {Rendering} with {DXR} and {Other} {APIs}},
+	isbn = {978-1-4842-4426-5 978-1-4842-4427-2},
+	shorttitle = {Ray {Tracing} {Gems}},
+	url = {http://link.springer.com/10.1007/978-1-4842-4427-2},
+	language = {en},
+	urldate = {2023-04-12},
+	publisher = {Apress},
+	editor = {Haines, Eric and Akenine-Möller, Tomas},
+	year = {2019},
+	doi = {10.1007/978-1-4842-4427-2},
+	keywords = {Computer graphics, DirectX, GPGPU, GPU, Rendering, VR, general purpose gpu, rasterization, virtual reality},
+}
+
+@article{chen_3d_2022,
+	title = {{3D} model-based terrestrial laser scanning ({TLS}) observation network planning for large-scale building facades},
+	volume = {144},
+	issn = {0926-5805},
+	url = {https://www.sciencedirect.com/science/article/pii/S0926580522004642},
+	doi = {10.1016/j.autcon.2022.104594},
+	abstract = {Planning a terrestrial laser scanning (TLS) observation network is vital for capturing large-scale building facade point clouds with high time efficiency and high quality. However, existing planning methods are susceptible to low reliability, computational burden and lack of robust registrability assessment solutions, especially for a large-scale task. Therefore, this paper proposes a 3D model-based TLS observation network planning method for large-scale building facades. Firstly, a simple 3D model is quickly obtained by low-cost unmanned aerial vehicle (UAV) photogrammetry. Secondly, a fast scanning simulation of TLS candidate scan positions is performed. Finally, the TLS network is generated by a weighted greedy algorithm and a registration assessment method. Comprehensive experiments based on simulation and real scanning were conducted for validating the proposed method. Results demonstrated that the planned TLS network was efficient in various complex scenes. Moreover, the proposed method outperformed the 2D model-based method in terms of reliability.},
+	language = {en},
+	urldate = {2023-04-12},
+	journal = {Automation in Construction},
+	author = {Chen, Zhiping and Zhang, Wendian and Huang, Ronggang and Dong, Zhen and Chen, Chi and Jiang, Liming and Wang, Hansheng},
+	month = dec,
+	year = {2022},
+	keywords = {3D model, Large-scale building facades, Registrability assessment, TLS observation network planning},
+	pages = {104594},
+}
+
+@article{pessacg_simplifying_2022,
+	title = {Simplifying {UAV}-{Based} {Photogrammetry} in {Forestry}: {How} to {Generate} {Accurate} {Digital} {Terrain} {Model} and {Assess} {Flight} {Mission} {Settings}},
+	volume = {13},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {1999-4907},
+	shorttitle = {Simplifying {UAV}-{Based} {Photogrammetry} in {Forestry}},
+	url = {https://www.mdpi.com/1999-4907/13/2/173},
+	doi = {10.3390/f13020173},
+	abstract = {In forestry, aerial photogrammetry by means of Unmanned Aerial Systems (UAS) could bridge the gap between detailed fieldwork and broad-range satellite imagery-based analysis. However, optical sensors are only poorly capable of penetrating the tree canopy, causing raw image-based point clouds unable to reliably collect and classify ground points in woodlands, which is essential for further data processing. In this work, we propose a novel method to overcome this issue and generate accurate a Digital Terrain Model (DTM) in forested environments by processing the point cloud. We also developed a highly realistic custom simulator that allows controlled experimentation with repeatability guaranteed. With this tool, we performed an exhaustive evaluation of the survey and sensor settings and their impact on the 3D reconstruction. Overall, we found that a high frontal overlap (95\%), a nadir camera angle (90°), and low flight altitudes (less than 100 m) results in the best configuration for forest environments. We validated the presented method for DTM generation in a simulated and real-world survey missions with both fixed-wing and multicopter UAS, showing how the problem of structural forest parameters estimation can be better addressed. Finally, we applied our method for automatic detection of selective logging.},
+	language = {en},
+	number = {2},
+	urldate = {2023-04-12},
+	journal = {Forests},
+	author = {Pessacg, Facundo and Gómez-Fernández, Francisco and Nitsche, Matías and Chamo, Nicolás and Torrella, Sebastián and Ginzburg, Rubén and De Cristóforis, Pablo},
+	month = feb,
+	year = {2022},
+	note = {Number: 2
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {aerial photogrammetry, digital terrain model, structural forest parameters, unmanned aerial systems},
+	pages = {173},
+}
+
+@article{ladra_compact_2022,
+	title = {Compact and indexed representation for {LiDAR} point clouds},
+	volume = {0},
+	issn = {1009-5020},
+	url = {https://doi.org/10.1080/10095020.2022.2121664},
+	doi = {10.1080/10095020.2022.2121664},
+	abstract = {LiDAR devices are capable of acquiring clouds of 3D points reflecting any object around them, and adding additional attributes to each point such as color, position, time, etc. LiDAR datasets are usually large, and compressed data formats (e.g. LAZ) have been proposed over the years. These formats are capable of transparently decompressing portions of the data, but they are not focused on solving general queries over the data. In contrast to that traditional approach, a new recent research line focuses on designing data structures that combine compression and indexation, allowing directly querying the compressed data. Compression is used to fit the data structure in main memory all the time, thus getting rid of disk accesses, and indexation is used to query the compressed data as fast as querying the uncompressed data. In this paper, we present the first data structure capable of losslessly compressing point clouds that have attributes and jointly indexing all three dimensions of space and attribute values. Our method is able to run range queries and attribute queries up to 100 times faster than previous methods.},
+	number = {0},
+	urldate = {2023-04-12},
+	journal = {Geo-spatial Information Science},
+	author = {Ladra, Susana and R. Luaces, Miguel and Paramá, José R. and Silva-Coira, Fernando},
+	month = nov,
+	year = {2022},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.1080/10095020.2022.2121664},
+	keywords = {3D point clouds, indexing, lossless compression},
+	pages = {1--36},
+}
+
+@article{teijeiro_interactive_2022,
+	title = {Interactive {Visualization} of {Large} {Point} {Clouds} {Using} an {Autotuning} {Multiresolution} {Out}-{Of}-{Core} {Strategy}},
+	issn = {0010-4620},
+	url = {https://doi.org/10.1093/comjnl/bxac179},
+	doi = {10.1093/comjnl/bxac179},
+	abstract = {Due to the increasingly large amount of data acquired into point clouds, from LiDAR (Light Detection and Ranging) sensors and 2D/3D sensors, massive point clouds processing has become a topic with high interest for several fields. Current client-server applications usually use multiresolution out-of-core proposals; nevertheless, the construction of the data structures required is very time-consuming. Furthermore, these multiresolution approaches present problems regarding point density changes between different levels of detail and artifacts due to the rendering of elements entering and leaving the field of view. We present an autotuning multiresolution out-of-core strategy to avoid these problems. Other objectives are reducing loading times while maintaining low memory requirements, high visualization quality and achieving interactive visualization of massive point clouds. This strategy identifies certain parameters, called performance parameters, and defines a set of premises to obtain the goals mentioned above. The optimal parameter values depend on the number of points per cell in the multiresolution structure. We test our proposal in our web-based visualization software designed to work with the structures and storage format used and display massive point clouds achieving interactive visualization of point clouds with more than 27 billion points.},
+	urldate = {2023-04-11},
+	journal = {The Computer Journal},
+	author = {Teijeiro, Diego and Amor, Margarita and Doallo, Ramón and Deibe, David},
+	month = dec,
+	year = {2022},
+	pages = {bxac179},
+}
+
 @misc{mcinnes_umap_2020,
 	title = {{UMAP}: {Uniform} {Manifold} {Approximation} and {Projection} for {Dimension} {Reduction}},
 	shorttitle = {{UMAP}},
@@ -904,18 +1150,6 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	pages = {104363},
 }
 
-@article{hendrich_ray_2019,
-	title = {Ray {Classification} for {Accelerated} {BVH} {Traversal}},
-	volume = {38},
-	doi = {10.1111/cgf.13769},
-	number = {4},
-	journal = {Computer Graphics Forum},
-	author = {Hendrich, J. and Pospíšil, A. and Meister, D. and Bittner, J.},
-	month = jul,
-	year = {2019},
-	pages = {49--56},
-}
-
 @article{cordonnier_authoring_2017,
 	title = {Authoring landscapes by combining ecosystem and terrain erosion simulation},
 	volume = {36},
@@ -1326,14 +1560,6 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	month = oct,
 	year = {2019},
 	pages = {107610},
-}
-
-@inproceedings{revelles_efficient_2000,
-	title = {An {Efficient} {Parametric} {Algorithm} for {Octree} {Traversal}},
-	booktitle = {Journal of {WSCG}},
-	author = {Revelles, J. and Ureña, C. and Lastra, M.},
-	year = {2000},
-	pages = {212--219},
 }
 
 @article{feng_analysis_2001,
@@ -4562,24 +4788,6 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	month = nov,
 	year = {2021},
 	pages = {5561--5573},
-}
-
-@article{sankey_uav_2018,
-	title = {{UAV} hyperspectral and lidar data and their fusion for arid and semi-arid land vegetation monitoring},
-	volume = {4},
-	issn = {2056-3485},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/rse2.44},
-	doi = {10.1002/rse2.44},
-	abstract = {Unmanned aerial vehicles (UAVs) provide a new research tool to obtain high spatial and temporal resolution imagery at a reduced cost. Rapid advances in miniature sensor technology are leading to greater potentials for ecological research. We demonstrate one of the first applications of UAV lidar and hyperspectral imagery and a fusion method for individual plant species identification and 3D characterization at submeter scales in south-eastern Arizona, USA. The UAV lidar scanner characterized the individual vegetation canopy structure and bare ground elevation, whereas the hyperspectral sensor provided species-specific spectral signatures for the dominant and target species at our study area in leaf-on condition. We hypothesized that the fusion of the two different data sources would perform better than either data type alone in the arid and semi-arid ecosystems with sparse vegetation. The fusion approach provides 84–89\% overall accuracy (kappa values of 0.80–0.86) in target species classification at the canopy scale, leveraging a wide range of target spectral responses in the hyperspectral data and a high point density (50 points/m2) in the lidar data. In comparison, the hyperspectral image classification alone produced 72–76\% overall accuracies (kappa values of 0.70 and 0.71). The UAV lidar-derived digital elevation model (DEM) is also strongly correlated with manned airborne lidar-derived DEM (R2 = 0.98 and 0.96), but was obtained at a lower cost. The lidar and hyperspectral data as well as the fusion method demonstrated here can be widely applied across a gradient of vegetation and topography to monitor and detect ecological changes at a local scale.},
-	language = {en},
-	number = {1},
-	urldate = {2023-02-28},
-	journal = {Remote Sensing in Ecology and Conservation},
-	author = {Sankey, Temuulen T. and McVay, Jason and Swetnam, Tyson L. and McClaran, Mitchel P. and Heilman, Philip and Nichols, Mary},
-	year = {2018},
-	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/rse2.44},
-	keywords = {3D modeling, UAV, high-resolution DEM, lidar, species identification, vegetation monitoring},
-	pages = {20--33},
 }
 
 @inproceedings{cunha_prediction_2021,
